fix: searchBar not taking full space and shining border covering clickable input

--- a/src/features/products/components/productsNavbar/itemsFilter/itemsFilter.css
+++ b/src/features/products/components/productsNavbar/itemsFilter/itemsFilter.css
@@ -6,10 +6,8 @@
 @keyframes expandSearchBarAnimation {
   from {
     width: 0;
-    max-width: 0;
   }
   to {
     width: 100%;
-    max-width: 392px;
   }
 }
